src/index-3.css
body {
    color: #2b283a;
    font-family: 'Lexend', 'Open Sans', sans-serif;
    margin: 0;
    font-weight: 300;
    background-color: #F8F8F8;
}

h1,
h3 {
    margin: 0;
}

h1 {
    color: #F8F8F8;
    font-size: 3rem; /* 48 / 16 */
}

h2 {
    color: #1C304A;
    font-size: 2rem; /* 32 / 16 */
    margin-top: 0;
}

h3 {
    font-size: 1.625rem; /* 26 / 16 */
}

p {
    font-size: 1.25rem; /* 20 / 16 */
    line-height: 1.5;
}

.subheading {
    display: block;
    font-size: 1.5rem; /* 24 / 16 */
}

.section-bottom h2 {
    color: inherit;
}

.link {
    color: #00A1D1;
    text-decoration: underline dotted;
}

.link-on-light:hover,
.link-on-light:active {
    color: #69456F;
}

.link-on-dark:hover,
.link-on-dark:active {
    color: #9BE59E;
}

.button {
    font-size: 1.5rem; /* 24 / 16 */
    font-weight: 500;
    text-decoration: none;
    display: inline-block;
    padding: 0.625rem 1.25rem; /* 10/16 and 20/16 */
    border-radius: 0.2875rem; /* 4.6 / 16 */
}

.button-purple {
    color: #F8F8F8;
    background: #69456F;
    margin-right: 0.625rem; /* 10 / 16 */
}

.button-blue {
    color: #F8F8F8;
    background: #00A1D1;
}

.button-purple:hover,
.button-purple:active {
    color: #F8F8F8;
    background-color: #00A1D1;
}

.button-blue:hover,
.button-blue:active {
    color: #F8F8F8;
    background-color: #69456F;
}

header,
section,
footer {
    padding: 2.875rem 0; /* 46 / 16 = 2.875rem */
}

header,
.section-bottom {
    background-color: #1C304A;
}

.section-bottom {
    color: #F8F8F8;
}

.container {
    width: 90%;
    max-width: 750px;
    margin: 0 auto;
}

.at-image {
    width: 100%;
    max-width: 640px;
    margin: 0 auto; /* centers the image horizontally, needs display: block; to work */
    display: block; /* key to centering the image, otherwise default is inline */
}

.photo-credits {
    margin-bottom: 2rem; /* 32 / 16 = 2rem */
}

.section-bottom-image-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.section-bottom-image-wrapper {
    width: 48%;
}

.accessibility-image {
    width: 100%;
    border-radius: 0.2875rem; /* 4.6 / 16 */
}

footer {
    text-align: center;
    color: #1C304A;
}

